--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.example.parsaniahardik.json_parse_listview"
+        applicationId "com.ero.poro.story"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
