--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    /* To setup the search dialog, first declare in your manifest that you want to support
+    older devices, but want to target Android 3.0 or later versions. When you do this,
+    your application automatically uses the action
+    bar on Android 3.0 or later and uses the traditional menu system on older devices:
+    */
+
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,11 +27,25 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
 
+        <activity android:name=".SearchResultsActivity" >
+
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+
+    </activity>
+
 
         <activity
+
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+        </activity>
         <activity
             android:name=".DetailsActivity"
             android:label="@string/title_activity_details"
